apps/site/web/static/css/_schedule-v2.scss
/* ... */
.trip-list-v2-row {
  @extend %unpadded-table-row;
  @include make-row();
  border-left: $border;
  border-right: $border;
  color: $gray-dark;
  display: block;

  &:empty {
    display: none;
  }

  @include media-breakpoint-up(md) {
    clear: left;
    float: left;
    width: 50%;
  }
}

a {
  &.trip-list-v2-row {
    @extend %button-focus-color;

    @include hover-focus-active() {
      border-bottom-color: $btn-primary-focus-bg;
      border-top-color: $btn-primary-focus-bg;
    }
  }

  .trip-list-v2-departure {
    color: $link-color;
  }

  &.trip-list-v2-row-selected {
    @extend %button-selected-color;

    @include media-breakpoint-up(md) {
      &::after {
        background: url('/images/selected-triangle.svg') no-repeat;
        background-size: cover;
        bottom: -2px;
        content: ' ';
        display: block;
        margin-top: 1px;
        position: absolute;
        right: -1.5rem;
        top: -2px;
        width: 1.5rem;
      }
    }

    @include media-breakpoint-down(sm) {
      border-color: $brand-primary;
    }

    .icon {
      @extend %icon-inverse;
    }
  }
}

.trip-list-v2 {
  margin-bottom: $base-spacing;
}

.trip-list-v2-header {
  @extend %table-header;
  color: $white;
  margin-top: $base-spacing;

  * {
    color: $white;
  }
}

.trip-list-v2-row-2-col {
  @extend %table-row;

  > div {
    @include make-col();
  }
}

.trip-list-v2-departure {
  @include make-col-span(4);
}

.trip-list-v2-headsign {
  @include make-col-span(8);
}

.time-block-name {
  @include make-col-span(7);
}

.time-block-times {
  @include make-col-span(5);
}

.trip-list-v2-footer {
  color: $link-color;
  display: block;
}

.trip-list-green-line-icon > svg {
  background-color: $white;
  border: 1px solid $brand-green-line;
  border-radius: 50%;
}

.trip-list-v2-realtime {
  border: 0;
  border-top: $border;
}

.commuter-status {
  @include first-column;
}

////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////
///// FREQUENCY TABLE
////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////

.schedule-v2-frequency-time {
  font-size: $font-size-sm;
}

////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////
///// TRIP INFO
////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////

////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////
///// VEHICLE LOCATION GRAPHIC
////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////

.vehicle-location {
  @include unpadded-column;
}

// "Show all stops" row -- dotted lines
.collapsed-row {
  @include stop-bubble-collapsed();

  .expand-link {
    @include stop-info-column();
    // add spacing between link and the next stop
    margin-bottom: $base-spacing;
  }
}

// first stop in the list, only display the line going down
.stop-group:first-child .schedule-trip-stop:first-child,
.route-stop-list .route-stop:first-child,
.schedule-v2-timetable-row:nth-child(2) {
  @include stop-bubble-first();
}

// the last stop in the list, don't display the line
.stop-group:last-child .schedule-trip-stop:last-child,
.schedule-v2-timetable-row:last-child {
  @include stop-bubble-last();

  .stop-info {
    border-bottom: 0;
  }
}

.route-stop-list.green-line .route-stop:first-child .stop-bubble:before {
  height: 100%; // override stop-bubble-first to prevent gaps on green line branches
}

.stop-info-column {
  min-width: 8rem;

  &:first-child {
    padding-right: $base-spacing;
  }
}

// trip info parent container
.schedule-trip-info {
  @include make-row();
  border-left: $border;
  border-right: $border;

  @include media-breakpoint-up(md) {
    float: right;
    width: 50%;
  }

  // Add the border to highlight the trip on mobile
  @include media-breakpoint-down(sm) {
    border: $border;
    border-bottom-width: $border-width * 2;
    border-color: $brand-primary;

    .trip-duration {
      border-bottom-color: $brand-primary;
    }
  }
}

.schedule-trip-info-header {
  @extend %table-header;
  @extend %table-row;

  @include media-breakpoint-down(sm) {
    display: none;
  }
}

.schedule-trip-stop,
.collapsed-row {
  @include stop-bubble-row();
}

.route-status,
.trip-duration {
  @extend %table-row;
}

.trip-info {
  .stop-info {
    width: grid-width(10);
  }
}

.trip-info-labels {
  @include stop-bubble-row();
  font-weight: bold;

  .stop-info {
    border-bottom-width: 0;
    padding-bottom: 0;

    @include media-breakpoint-down(xs) {
      display: none;
    }
  }
}

////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////
///// DATE AND DIRECTION FILTER BUTTONS
////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////

.trip-filters {
  // We use flexbox to make the filter buttons display as same
  // height when the headsign is long and text is forced to
  // wrap. Button heights will simply be uneven equal on browsers
  // that do not support flexbox (>1% of our visitors).

  @include media-breakpoint-up(sm) {
    // scss-lint:disable VendorPrefix
    align-items: stretch;
    display: -ms-flexbox;
    display: -webkit-box;
    display: -webkit-flex;
    display: flex;
  }
}

.date-filter,
.direction-filter {
  // scss-lint:disable VendorPrefix
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: flex;
  -ms-flex-direction: column;
  -webkit-flex-direction: column;
  flex-direction: column;
}
/* ... */

